[gd_scene load_steps=5 format=3 uid="uid://b4c88kienbj8q"]

[ext_resource type="Script" uid="uid://f5ke07o2mygi" path="res://Singletons/ContentLoader/scene_loader.gd" id="1_11ji0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tt7nc"]
size = Vector3(1, 2, 0.504)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6wayg"]
albedo_color = Color(0.281989, 0.500556, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_qelyj"]

[node name="SceneLoader_Exterior" type="Area3D"]
transform = Transform3D(0.889039, 0, 0, 0, 0.889039, 0, 0, 0, 0.889039, 0, 0, 0)
collision_layer = 2
collision_mask = 2
monitoring = false
script = ExtResource("1_11ji0")
scene_going_right = "Exterior"
scene_going_left = "Exterior"
play_door_sound = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.573811, 1.403, -1.6778)
shape = SubResource("BoxShape3D_tt7nc")

[node name="TeleportPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.5743, 0.839686, 65.876)

[node name="MeshInstance3D" type="MeshInstance3D" parent="TeleportPoint"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
material_overlay = SubResource("StandardMaterial3D_6wayg")
mesh = SubResource("BoxMesh_qelyj")

[node name="DoorSound" type="FmodEventEmitter3D" parent="."]
event_name = "event:/door"
event_guid = "{e1b840f0-f199-4b6a-a7c9-2dc2fe5e7d57}"
attached = false
volume = 0.3
unique_name_in_owner = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
