[gd_scene load_steps=3 format=3 uid="uid://bbyg62wymptn6"]

[ext_resource type="Script" uid="uid://f5ke07o2mygi" path="res://scene_loader.gd" id="1_6wayg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3cled"]
size = Vector3(5.15154, 4.75562, 0.320269)

[node name="SceneLoader" type="Area3D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_6wayg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00765991, 0.747803, -0.117279)
shape = SubResource("BoxShape3D_3cled")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
